fix: postMan fix 2